# probis

./: .env.example  .gitignore  AGENTS.md  README.md  dev.sh  docker-compose.yml  package-lock.json  package.json  plan.md
apps/api/: package.json
apps/api/src/: index.js
apps/api/src/config/: env.js
apps/api/src/lib/: logger.js
apps/api/src/routes/: ai.js  health.js  polymarket.js  sports.js  trades.js  weather.js
apps/api/src/scripts/: chicago-alerts.js  chicago-archive-backfill.js  chicago-backtest.js  chicago-cli.js  chicago-forecast-vintage-backfill.js  chicago-market-board-backfill.js  chicago-model-evaluate.js  chicago-model-train.js  chicago-snapshot.js  (+1 more)
apps/api/test/: chicago.test.js
apps/web/: index.html  package.json  vite.config.js
apps/web/src/: App.jsx  main.jsx  styles.css
backend/: .env.example  README.md  pyproject.toml
backend/src/probis/: __init__.py  api.py  bus.py  config.py  controller.py  logging.py  main.py  models.py  processing.py  state.py  workers.py
backend/src/probis.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/src/probis/services/: __init__.py  account.py  analysis.py  news.py  ollama_client.py  polymarket.py  polymarket_account.py  sim_feed.py
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo
frontend/src/: App.tsx  main.tsx  styles.css
frontend/src/lib/: api.ts  types.ts
scripts/: check-orders-and-positions.js  sync-polymarket-us-sports-universe.js
workers/weather_ml/: README.md  requirements.txt  train_weather_model.py
(+36 files in other folders)
