[project]
name = "probis"
version = "0.1.0"
description = "Low-latency, AI-assisted trading system for prediction markets"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "noah" }]

dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.8",
  "pydantic-settings>=2.4",
  "httpx>=0.27",
  "polymarket-us>=0.1.2",
  "redis>=5.0",
  "numpy>=2.0",
  "orjson>=3.10",
  "websockets>=12.0",
]

[project.optional-dependencies]
db = [
  "sqlalchemy[asyncio]>=2.0",
  "asyncpg>=0.29",
]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "ruff>=0.6",
]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
